--- a/public/style1mobile/style1mobile.css
+++ b/public/style1mobile/style1mobile.css
@@ -1,3 +1,9 @@
+
+  
+
+body{
+  width: 70%;
+}
 header {
     background-color:gray;
     color: red;
@@ -95,3 +101,65 @@ h3:before {
     color: red;
 }
 
+.skill {
+  background-color: gray;
+  margin-top: 20px;
+  padding: 1%;
+  width: 70%;
+  height: 100%;
+  }
+  
+  .skills-primary [data-skill="5"] span {
+    background-color: red;
+  display: block;
+    padding: 1%;
+    width: 50%;
+    height: 100%;
+    color: white;
+  
+  }
+  
+  .skills-primary [data-skill="3"] span {
+    background-color: red;
+  display: block;
+    padding: 1%;
+    width: 50%;
+    height: 100%;
+    color: white;
+  }
+  
+  .skills-primary [data-skill="1"] span {
+    background-color: red;
+  display: block;
+    padding: 1%;
+    width: 50%;
+    height: 100%;
+    color: white;
+  }
+  
+  .skills-secondary [data-skill="5"] span {
+    background-color: red;
+  display: block;
+    padding: 1%;
+    width: 50%;
+    height: 100%;
+    color: white;
+  }
+  
+  .skills-secondary [data-skill="9"] span {
+    background-color: red;
+  display: block;
+    padding: 1%;
+    width: 50%;
+    height: 100%;
+    color: white;
+  }
+  
+  .skills-secondary [data-skill="7"] span {
+    background-color: red;
+  display: block;
+    padding: 1%;
+    width: 50%;
+    height: 100%;
+    color: white;
+  }
