--- a/public/style1/style1.css
+++ b/public/style1/style1.css
@@ -29,7 +29,7 @@ hgroup h1{
     margin-left: 45px ;
     display: grid;
     grid-template-columns: 50% 50%;
-    width:45%;
+    width:80%;
     
 }
 
@@ -62,7 +62,7 @@ dl {
 dt {
   float: left;
   width: 50%;
-  /* adjust the width; make sure the total of both is 100% */
+
   background:red;
   padding: 0;
   margin: 0;
@@ -71,7 +71,7 @@ dt {
 dd {
   float: left;
   width: 50%;
-  /* adjust the width; make sure the total of both is 100% */
+
   background: black;
   padding: 0;
   margin: 0;
@@ -101,3 +101,97 @@ h3:before {
     color: red;
 }
 
+
+.contacts{
+  position: absolute;
+  top: 20px;
+right: 10px;
+width: 40%;}
+
+#contact h3 {
+  display: none;
+}
+.skill {
+background-color: gray;
+margin-top: 20px;
+padding: 1%;
+width: 100%;
+height: 100%;
+}
+
+.skills-primary [data-skill="5"] span {
+  background-color: red;
+display: block;
+  padding: 1%;
+  width: 50%;
+  height: 100%;
+  color: white;
+
+}
+
+.skills-primary [data-skill="3"] span {
+  background-color: red;
+display: block;
+  padding: 1%;
+  width: 50%;
+  height: 100%;
+  color: white;
+}
+
+.skills-primary [data-skill="1"] span {
+  background-color: red;
+display: block;
+  padding: 1%;
+  width: 50%;
+  height: 100%;
+  color: white;
+}
+
+.skills-secondary [data-skill="5"] span {
+  background-color: red;
+display: block;
+  padding: 1%;
+  width: 50%;
+  height: 100%;
+  color: white;
+}
+
+.skills-secondary [data-skill="9"] span {
+  background-color: red;
+display: block;
+  padding: 1%;
+  width: 50%;
+  height: 100%;
+  color: white;
+}
+
+.skills-secondary [data-skill="7"] span {
+  background-color: red;
+display: block;
+  padding: 1%;
+  width: 50%;
+  height: 100%;
+  color: white;
+}
+
+.skills-secondary:before{
+  content: "Other";
+  top:400px;
+  position: absolute;
+  
+  font-size: 20x;
+
+}
+
+.skills-primary::before{
+  content: "Main";
+  top:200Px;
+  position: absolute;
+  
+  font-size: 20x;
+
+}
+
+h4 span.experience-type:after{
+  content: "@";
+}
