--- a/public/style2/style2.css
+++ b/public/style2/style2.css
@@ -1,39 +1,398 @@
-header{
-  margin-bottom: 150px;
-}
-header h1{
-  margin-top: 30px;
-  border-bottom: 0.5px ridge gray;
+body{
+  width: 80%;
 }
 
 header img {
   position: absolute;
-  right:1000px;
+  right:450px;
   top:30px;
   width:130px;
-  transform: rotate(-30deg);
-}
-h2{
-  font-size: 15px;
-  color:gray
-}
-
-
-
-
-.content  h3 {
- 
+  transform: rotate(-30deg);}
   
-  width: 300px;
-  background-color: red;
+  header h2{
+    display: none;
+  }
+ 
+  hgroup{
+    border-bottom: 1px solid gray;
+    height: 3 vw;
+  }
+
+#about p{
+  margin-bottom: 10px;
+  width: 50%;
+  margin-left:350px;
+  
+  color: gray;
+}
+#about h3{
+  display:none
+}
+
+
+h3{
+  
   border-right: 1px solid black;
-  height: 200px;
+
+  text-align:end;
+
+ 
+  
+  
+}
+header{
+  margin-left: 350px;
+}
+
+.skills{
+ display: grid;
+ grid-template-columns: 1fr 1fr 1fr;
+ 
+ 
+}
+
+#competencies{
+  display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 10px;
+    padding: 10px;
+  }
+  #competencies > h3{
+    grid-row: 1/3;
+    padding-right: 25px;
+  }
+
+  .skills-primary [data-skill="5"] span {
+    background-color: #008080
+    ;
+  display: block;
+    padding: 1%;
+    
+    height: 100%;
+    color: white;
+ 
+    width: 30%;
+   
+  
+  }
+  .skills-primary [data-skill="5"] span:after {
+    content:"\2605 \2605 \2605 \2605";
+  }
+  .skills-primary [data-skill="3"] span {
+    background-color: #008080
+    ;
+  display: block;
+    padding: 1%;
+    width: 30%;
+    height: 100%;
+    color: white;
+    
+  }
+  .skills-primary [data-skill="3"] span:after {
+    content:"\2605 \2605 \2605";
+  }
+  
+  .skills-primary [data-skill="1"] span {
+    background-color: #008080
+    ;
+  display: block;
+    padding: 1%;
+    width: 30%;
+    height: 100%;
+    color: white;
+  }
+  .skills-primary [data-skill="1"] span:after{
+    content:"\2605 \2605"
+  }
+  
+  .skills-secondary [data-skill="5"] span {
+    background-color: #008080
+    ;
+  display: block;
+    padding: 1%;
+    width: 30%;
+    height: 100%;
+    color: white;
+    font-size: 12px;
+    text-align: justify;
+  
+   
+  }
+  .skills-secondary [data-skill="5"] span:after {
+    content:"\2605 \2605";
+  
+  }
+  
+  .skills-secondary [data-skill="9"] span {
+    background-color: #008080
+    ;
+  display: block;
+    padding: 1%;
+    width: 30%;
+    height: 100%;
+    color: white;
+    font-size: 12px;
+   
+  }
+  .skills-secondary [data-skill="9"] span:after {
+    content:"\2605 \2605";}
+  
+  .skills-secondary [data-skill="7"] span {
+    background-color: #008080
+    ;
+   
+  display: block;
+    padding: 1%;
+    width: 30%;
+    height: 100%;
+    color: white;
+    font-size: 12px;
+    
+  }
+  .skills-secondary [data-skill="7"] span:after {
+    content: "\2605 \2605";}
   
 
+#experiences > h3{
+grid-row: 1/3 ;
+padding-right: 25px;}
+
+#experiences{
+  display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 10px;
+    padding: 10px;
+  }
+
+#experiences > h3{
+grid-row: 1/3 ;
+padding-right: 25px;
 
 
 }
-.content p{
+#education{
+  display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 10px;
+    padding: 10px;
+  }
+  #education > h3{
+    grid-row: 1/3;
+    padding-right: 25px;
+  }
+
+  #hobbies{
+    display: grid;
+      grid-template-columns: 1fr 2fr;
+      gap: 10px;
+      padding: 10px;
+    }
+   #hobbies > h3{
+      grid-row: 1/3;
+      padding-right: 25px;
+    }
+
+    #contact{
+      display: none;
+    }
+
+
+  .experience-institution{
+    display: none;
+  }
+  .experience{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+   
+   
+  }
+
+  @media only screen and (max-width: 600px) { 
+
+    header img {
+      
+      position: absolute;
+      right:450px;
+      top:30px;
+      width:130px;
+      transform: rotate(-30deg);}
+      
+      header h2{
+        display: none;
+      }
+     
+      hgroup{
+        border-bottom: 1px solid gray;
+        height: 3 vw;
+      }
+    
+    #about p{
+      margin-bottom: 10px;
+      width: 50%;
+     
+      
+      color: gray;
+    }
+    #about h3{
+      display:none
+    }
+    
+    
+    h3{
+      
+      text-decoration:underline;
+      
+     
+     
+      
+      
+    }
+    
+    
+    
+    .skills{
+     display: grid;
+     grid-template-columns: auto auto ato;
+     
+     
+     
+    }
+    
+    #competencies{
+      display: block;
+      
+      }
+    
+    
+      .skills-primary [data-skill="5"] span {
+        background-color: #008080
+        ;
+      display: block;
+        padding: 1%;
+        
+        height: 100%;
+        color: white;
+     
+        width: 30%;
+       
+       
+      
+      }
+      .skills-primary [data-skill="5"] span:after {
+        content:"\2605 \2605 \2605 \2605";
+      }
+      .skills-primary [data-skill="3"] span {
+        background-color: #008080
+        ;
+      display: block;
+        padding: 1%;
+        width: 30%;
+        height: 100%;
+        color: white;
+        
+      }
+      .skills-primary [data-skill="3"] span:after {
+        content:"\2605 \2605 \2605";
+      }
+      
+      .skills-primary [data-skill="1"] span {
+        background-color: #008080
+        ;
+      display: block;
+        padding: 1%;
+        width: 30%;
+        height: 100%;
+        color: orangered;
+      }
+      .skills-primary [data-skill="1"] span:after{
+        content:"\2605 \2605"
+      }
+      
+      .skills-secondary [data-skill="5"] span {
+        background-color: #008080
+        ;
+      display: block;
+        padding: 1%;
+        width: 30%;
+        height: 100%;
+        color: white;
+        font-size: 12px;
+        text-align: justify;
+      
+       
+      }
+      .skills-secondary [data-skill="5"] span:after {
+        content:"\2605 \2605";
+      
+      }
+      
+      .skills-secondary [data-skill="9"] span {
+        background-color: #008080
+        ;
+      display: block;
+        padding: 1%;
+        width: 30%;
+        height: 100%;
+        color: white;
+        font-size: 12px;
+       
+      }
+      .skills-secondary [data-skill="9"] span:after {
+        content:"\2605 \2605";}
+      
+      .skills-secondary [data-skill="7"] span {
+        background-color: #008080
+        ;
+       
+      display: block;
+        padding: 1%;
+        width: 30%;
+        height: 100%;
+        color: white;
+        font-size: 12px;
+        
+      }
+      .skills-secondary [data-skill="7"] span:after {
+        content: "\2605 \2605";}
+      
+    
+    
+    
+    #experiences{
+      display: block;
+        grid-template-columns: 1fr 2fr;
+        gap: 10px;
+        padding: 10px;
+      }
+    
+    
+    #education{
+      display: block;
+        grid-template-columns: 1fr 2fr;
+        gap: 10px;
+        padding: 10px;
+      }
+    
+    
+      #hobbies{
+        display: block;
+         
+      }
+    
+        #contact{
+          display: none;
+        }
+    
+    
+      .experience-institution{
+        display: none;
+      }
+      .experience{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+       
+       
+      }
+  }
+
  
-margin-left: 100px  
-}
