--- a/public/style1/style1.css
+++ b/public/style1/style1.css
@@ -1,7 +1,7 @@
 header {
     background-color:gray;
     color: red;
-      display: flex;
+      display: grid;
       flex-direction: row;}
     
     
@@ -19,10 +19,13 @@ header div{
 hgroup h1{
   margin-right:  5px;
   margin-top: 35px;
+
 }
     
+    header img{
+      display: inline;
+    }
     
-
 
 
 
@@ -150,7 +153,7 @@ display: block;
 }
 
 .skills-secondary [data-skill="5"] span {
-  background-color: red;
+  background-color: #ff4b4b;
 display: block;
   padding: 1%;
   width: 50%;
@@ -159,7 +162,7 @@ display: block;
 }
 
 .skills-secondary [data-skill="9"] span {
-  background-color: red;
+  background-color: #ff4b4b;
 display: block;
   padding: 1%;
   width: 50%;
@@ -168,7 +171,7 @@ display: block;
 }
 
 .skills-secondary [data-skill="7"] span {
-  background-color: red;
+  background-color: #ff4b4b;
 display: block;
   padding: 1%;
   width: 60%;
