--- a/public/style2/style2.css
+++ b/public/style2/style2.css
@@ -37,9 +37,8 @@ h3{
   text-align:end;
 
  
-  
-  
 }
+
 header{
   margin-left: 350px;
 }
@@ -49,6 +48,7 @@ header{
  grid-template-columns: 1fr 1fr 1fr;
  
  
+ 
 }
 
 #competencies{
@@ -56,10 +56,12 @@ header{
     grid-template-columns: 1fr 2fr;
     gap: 10px;
     padding: 10px;
+    
   }
   #competencies > h3{
     grid-row: 1/3;
     padding-right: 25px;
+    
   }
 
   .skills-primary [data-skill="5"] span {
@@ -71,7 +73,7 @@ header{
     height: 100%;
     color: white;
  
-    width: 30%;
+    width: 40%;
    
   
   }
@@ -83,7 +85,7 @@ header{
     ;
   display: block;
     padding: 1%;
-    width: 30%;
+    width: 40%;
     height: 100%;
     color: white;
     
@@ -97,7 +99,7 @@ header{
     ;
   display: block;
     padding: 1%;
-    width: 30%;
+    width: 40%;
     height: 100%;
     color: white;
   }
@@ -110,7 +112,7 @@ header{
     ;
   display: block;
     padding: 1%;
-    width: 30%;
+    width: 40%;
     height: 100%;
     color: white;
     font-size: 12px;
@@ -128,7 +130,7 @@ header{
     ;
   display: block;
     padding: 1%;
-    width: 30%;
+    width: 40%;
     height: 100%;
     color: white;
     font-size: 12px;
@@ -143,7 +145,7 @@ header{
    
   display: block;
     padding: 1%;
-    width: 30%;
+    width: 40%;
     height: 100%;
     color: white;
     font-size: 12px;
@@ -187,6 +189,9 @@ padding-right: 25px;
       gap: 10px;
       padding: 10px;
     }
+    #hobbies:after{
+      content:"../";
+    }
    #hobbies > h3{
       grid-row: 1/3;
       padding-right: 25px;
@@ -203,196 +208,48 @@ padding-right: 25px;
   .experience{
     display: grid;
     grid-template-columns: 1fr 1fr;
-   
-   
-  }
+   }
 
-  @media only screen and (max-width: 600px) { 
+   
+
+  @media only screen and (max-width: 600px) {
 
     header img {
-      
-      position: absolute;
-      right:450px;
-      top:30px;
-      width:130px;
-      transform: rotate(-30deg);}
-      
-      header h2{
-        display: none;
-      }
-     
-      hgroup{
-        border-bottom: 1px solid gray;
-        height: 3 vw;
-      }
-    
-    #about p{
-      margin-bottom: 10px;
-      width: 50%;
-     
-      
-      color: gray;
-    }
-    #about h3{
-      display:none
-    }
-    
-    
-    h3{
-      
-      text-decoration:underline;
-      
-     
-     
-      
-      
-    }
-    
-    
-    
-    .skills{
-     display: grid;
-     grid-template-columns: auto auto ato;
-     
-     
-     
-    }
-    
-    #competencies{
-      display: block;
-      
-      }
-    
-    
-      .skills-primary [data-skill="5"] span {
-        background-color: #008080
-        ;
-      display: block;
-        padding: 1%;
-        
-        height: 100%;
-        color: white;
-     
-        width: 30%;
-       
-       
-      
-      }
-      .skills-primary [data-skill="5"] span:after {
-        content:"\2605 \2605 \2605 \2605";
-      }
-      .skills-primary [data-skill="3"] span {
-        background-color: #008080
-        ;
-      display: block;
-        padding: 1%;
-        width: 30%;
-        height: 100%;
-        color: white;
-        
-      }
-      .skills-primary [data-skill="3"] span:after {
-        content:"\2605 \2605 \2605";
+      visibility: hidden;
       }
       
-      .skills-primary [data-skill="1"] span {
-        background-color: #008080
-        ;
-      display: block;
-        padding: 1%;
-        width: 30%;
-        height: 100%;
-        color: orangered;
-      }
-      .skills-primary [data-skill="1"] span:after{
-        content:"\2605 \2605"
-      }
-      
-      .skills-secondary [data-skill="5"] span {
-        background-color: #008080
-        ;
-      display: block;
-        padding: 1%;
-        width: 30%;
-        height: 100%;
-        color: white;
-        font-size: 12px;
-        text-align: justify;
-      
-       
-      }
-      .skills-secondary [data-skill="5"] span:after {
-        content:"\2605 \2605";
-      
-      }
-      
-      .skills-secondary [data-skill="9"] span {
-        background-color: #008080
-        ;
-      display: block;
-        padding: 1%;
-        width: 30%;
-        height: 100%;
-        color: white;
-        font-size: 12px;
-       
-      }
-      .skills-secondary [data-skill="9"] span:after {
-        content:"\2605 \2605";}
-      
-      .skills-secondary [data-skill="7"] span {
-        background-color: #008080
-        ;
-       
-      display: block;
-        padding: 1%;
-        width: 30%;
-        height: 100%;
-        color: white;
-        font-size: 12px;
-        
-      }
-      .skills-secondary [data-skill="7"] span:after {
-        content: "\2605 \2605";}
-      
     
-    
-    
-    #experiences{
-      display: block;
-        grid-template-columns: 1fr 2fr;
-        gap: 10px;
-        padding: 10px;
+      header{
+        margin: 0;
       }
-    
-    
-    #education{
-      display: block;
-        grid-template-columns: 1fr 2fr;
-        gap: 10px;
-        padding: 10px;
+      #about p{
+        margin-bottom: 70px;
+        width: 300px;
+        margin-left: 0;
       }
-    
-    
-      #hobbies{
-        display: block;
-         
-      }
-    
-        #contact{
-          display: none;
-        }
-    
-    
-      .experience-institution{
-        display: none;
-      }
-      .experience{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-       
-       
-      }
-  }
 
+ h3{
+  border-right: 0;
+  border-bottom: 1px black solid  ;
+ display: block;
+
+
+  b
  
+ }
+ .experience{
+  display:block ;
+  width: 300px;
+  
+ }
+ #experiences > h3{
+  display: block;
+  
+ }
+
+.experience{
+  display: block;
+  ;
+  left: 0;
+ }
+}
