--- a/public/style1/style1.css
+++ b/public/style1/style1.css
@@ -1,13 +1,19 @@
 header {
     background-color:gray;
     color: red;
-      display: grid;
-      flex-direction: row;}
+    display: flex;
+    flex-direction: row;
+     
+      }
     
     
 
 
+header img{
+  width: 200px;
+ 
 
+}
 
 
 
@@ -181,7 +187,7 @@ display: block;
 
 .skills-secondary:before{
   content: "Other";
-  top:430px;
+  top:465px;
   position: absolute;
   
   font-size: 20x;
@@ -190,7 +196,7 @@ display: block;
 
 .skills-primary::before{
   content: "Main";
-  top:230Px;
+  top:330px;
   position: absolute;
   
   font-size: 20x;
