html after fixing an error2

--- a/public/style1/style1.css
+++ b/public/style1/style1.css
@@ -229,6 +229,8 @@ header h1, h2 {
     margin-left: 0
 }
 
+}
+
 dd {
   background-color: white;
 } 
@@ -249,7 +251,13 @@ top: 630px;
 
 } 
 #contact h3 {
-visibility: visible;
+visibility: hidden;
+}
+.skills-secondary:before{
+  display: none;
+}
+.skills-primary::before{
+  visibility: hidden;
 }
 }
 
