html after fixing colors

--- a/public/style2/style2.css
+++ b/public/style2/style2.css
@@ -210,6 +210,14 @@ padding-right: 25px;
     grid-template-columns: 1fr 1fr;
    }
 
+   dl.contact-github{
+    background-image: ;
+   }
+
+   span.experience-type {
+    color:   #008080
+
+   }
    
 
   @media only screen and (max-width: 600px) {
